plugins/in-app-menu/style.css
/* increase font size for menu and menuItems */
.titlebar,
.menubar-menu-container .action-label {
	font-size: 14px !important;
}

/* fixes nav-bar-background opacity bug, reposition it, and allows clicking scrollbar through it */
#nav-bar-background {
	opacity: 1 !important;
	pointer-events: none !important;
	position: sticky !important;
	top: 0 !important;
	height: 75px !important;
}

/* remove window dragging for nav bar (conflict with titlebar drag) */
ytmusic-nav-bar,
.tab-titleiron-icon,
ytmusic-pivot-bar-item-renderer {
	-webkit-app-region: unset !important;
}

/* move up item selection renderers */
ytmusic-item-section-renderer.stuck #header.ytmusic-item-section-renderer,
ytmusic-tabs.stuck {
	top: calc(var(--ytmusic-nav-bar-height) - 15px) !important;
}

/* fix weird positioning in search screen*/
ytmusic-header-renderer.ytmusic-search-page {
	position: unset !important;
}

/* Move navBar downwards */
ytmusic-nav-bar[slot="nav-bar"] {
	top: 17px !important;
}

/* fix page progress bar position*/
yt-page-navigation-progress,
#progress.yt-page-navigation-progress {
	top: 30px !important;
}

/* Custom scrollbar */
::-webkit-scrollbar {
	width: 12px;
	background-color: #030303;
	border-radius: 100px;
	-moz-border-radius: 100px;
	-webkit-border-radius: 100px;
}
/* hover effect for both scrollbar area, and scrollbar 'thumb' */
::-webkit-scrollbar:hover {
	background-color: rgba(15, 15, 15, 0.699);
}

/* The scrollbar 'thumb' ...that marque oval shape in a scrollbar */
::-webkit-scrollbar-thumb:vertical {
	background-clip: padding-box;
	border: 2px solid rgba(0, 0, 0, 0);

	background: #3a3a3a;
	border-radius: 100px;
	-moz-border-radius: 100px;
	-webkit-border-radius: 100px;
}
::-webkit-scrollbar-thumb:vertical:active {
	background: #4d4c4c; /* Some darker color when you click it */
	border-radius: 100px;
	-moz-border-radius: 100px;
	-webkit-border-radius: 100px;
}

